--- a/admissionList.html
+++ b/admissionList.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>
-        registration list
+        Admission list
     </title>
     <link rel="stylesheet" href="registrationList.css" type="text/css">
     <meta name="viewport" width="device-width" initial-scale="1.0">
@@ -33,8 +33,7 @@
                 <th>Father's Contact No.</th>
                 <th>Registration date</th>
                 <th>Modify</th>
-                <th>Make Admission</th>
-                <th>Print Fee Receipt </th>
+                <th>Print</th>
                 <th>Delete</th>
             </tr>
         </table>
@@ -42,7 +41,7 @@
     <div class="footer" id="footer">
         <p><b>&copy Simption tech pvt ltd</b></p>
     </div>
-    <script src="registrationList.js"></script>
+    <script src="admissionList.js"></script>
 </body>
 
 </html>
