--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -4,6 +4,7 @@
 	<title>
 		Registration Form
 	</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="registrationFormstyle.css" type="text/css">
 </head>
 
