--- a/Signup.html
+++ b/Signup.html
@@ -4,7 +4,7 @@
     <title>
         Signup
     </title>
-    <meta name="viewport" width="device-width" initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Signupstyle.css" type="text/css">
 
 </head>
