--- a/admissionPage.html
+++ b/admissionPage.html
@@ -5,6 +5,7 @@
         Admission
     </title>
     <link rel="stylesheet" href="admissionPageStyle.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
