--- a/registrationFormUpdate.html
+++ b/registrationFormUpdate.html
@@ -5,6 +5,7 @@
         RegistrationFormUpdate
     </title>
     <link rel="stylesheet" href="registrationFormStyle.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
