--- a/registrationList.html
+++ b/registrationList.html
@@ -5,7 +5,7 @@
         registration list
     </title>
     <link rel="stylesheet" href="registrationList.css" type="text/css">
-    <meta name="viewport" width="device-width" initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
