--- a/Login.html
+++ b/Login.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <header>
+        <a href=""><img src="images/SimptionLogo.jpg" alt="logo" id="logo">
+            <p class="company-name">Simption Tech Pvt Ltd</p>
+        </a>
+    </header>
     <div class="Login-form">
         <form name="loginForm" onsubmit="verify(); return false;">
             <h1>Login</h1>
@@ -28,6 +33,9 @@
             <a href="Signup.html"><input class="btn" type="button" id="SignUp" name="SignUp" value="Sign-up"></a>
         </form>
     </div>
+    <footer>
+        <p>&copy Simption Tech. Pvt. Ltd.</p>
+    </footer>
 
     <script src="Signup.js"></script>
     <script src="Login.js"></script>
