--- a/Signup.html
+++ b/Signup.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <header>
+        <a href=""><img src="images/SimptionLogo.jpg" alt="logo" id="logo">
+            <p class="company-name">Simption Tech Pvt Ltd</p>
+        </a>
+    </header>
     <div class="SignupForm">
         <form name="Signup" onsubmit="validate(); return false;">
             <h1>Sign-up</h1>
@@ -38,6 +43,9 @@
             </div>
         </form>
     </div>
+    <footer>
+        <p>&copy Simption Tech. Pvt. Ltd.</p>
+    </footer>
 
     <script src="Signup.js"></script>
 </body>
