bug fix registartion list

--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -11,6 +11,7 @@
 <body>
 	<div class="header">
 		<img src="images/SimptionLogo.jpg" alt="logo" id="logo">
+		<p id="Company-name">Simption Tech Pvt Ltd</p>
 		<div class="menu">
 			<ul class="nav">
 				<li><a onclick="logout()">Logout</a></li>
