--- a/registrationList.html
+++ b/registrationList.html
@@ -1,5 +1,5 @@
-<html>
 
+<html>
 <head>
     <title>
         registration list
@@ -11,6 +11,7 @@
 <body>
     <div class="header">
         <img src="images/SimptionLogo.jpg" alt="logo" id="logo">
+        <p id="Company-name">Simption Tech Pvt Ltd</p>
         <div class="menu">
             <ul class="nav">
                 <li><a onclick="logout()">Logout</a></li>
@@ -42,8 +43,8 @@
     <div class="footer" id="footer">
         <p><b>&copy Simption tech pvt ltd</b></p>
     </div>
-    <script src="registrationList.js"></script>
-    
+    <script src="./registrationList.js"></script>
+
 </body>
 
 </html>
